[package]
name = "giga"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"

[dependencies]
termion = "2.0"
libc = "0.2"
syntect = {version = "5.0", features = ["metadata"]}
ropey = "1.6.1"
gix = "0.58.0"
